--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:hint="@string/username"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/edit_text"
+        android:id="@+id/input_name"
         />
 
     <EditText
@@ -25,7 +25,8 @@
         app:layout_constraintBottom_toTopOf="@id/button_array"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:contextClickable="true" />
+        android:inputType="date"
+        />
 
 
     <Button
@@ -35,19 +36,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@id/button_get_date"
-        android:text="@string/get_array"/>
+        android:text="@string/get_array"
 
+        />
 
-    <android.support.v7.widget.RecyclerView
+    <TextView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_array"
-        android:layout_marginTop="10dp"
-        android:id="@+id/recycle_view"
-        />
+        android:id="@+id/text_view"/>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
